# senscopic_sdk

./: 99-senscopic.rules  CMakeCache.txt  CMakeLists.txt  Makefile  camtest  camtest.cpp  cmake_install.cmake  compile.sh  compile_commands.json  install_3rd.sh  readme.md
camera_config/: camera_parameter.json  sensor_conf_list.json
sense_converter/: disparity_png2pcd.py  par_1280x720_1280x720_S0.py  par_1280x720_768x480_S0.py
src/: CameraModule.hpp  DeviceConfig.hpp  depth_init.h  dumpTool.cpp  dumpTool.h  falcon_104.hpp  hid.c  hidapi.h  merge_init.h  qedit.h  rectify_init.h  stdafx.h  targetver.h  uvc_interface.cpp  uvc_interface.h
